# gordon-in-your-kitchen

./: README.md  agent.py  cookbook_pdf.py  pyproject.toml
gordon-frontend/: package-lock.json  package.json
gordon-frontend/src/: App.css  App.js
